[project]
name = "sast-cxx-lessons"
version = "0.1.0"
description = "南京邮电大学软件协会 C++ 教学课程"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=1.0.5",
    "fastmcp",
    "langchain-openai",
    "langgraph",
    "rich",
]

[project.optional-dependencies]
docs = [
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
    "pymdown-extensions>=10.7",
]

[project.scripts]
docs-serve = "mkdocs:serve"
docs-build = "mkdocs:build"
